# veloz-backend

./: .gitignore  TODO.md  docker-compose.yml  example.env
entry-point/: Cargo.toml  Dockerfile
entry-point/migrations/: 0001_create_users_table.sql  0003_add_user_role.sql  0004_create_profiles.sql  0005_create_wallets.sql  0006_create_skins.sql  0007_create_battlepass.sql  0008_create_store.sql  0009_create_runs.sql  0010_create_characters.sql  0011_skins_drop_text_add_character.sql  0012_create_avatars_frames.sql  0013_create_prize_wheel.sql  0014_create_payments.sql  0015_payments_etomin_id.sql  0016_characters_metadata.sql  0017_characters_rarity.sql  0018_user_metadata.sql  0019_wallet_energy_refill.sql  0020_create_missions.sql  0021_signup_defaults_flags.sql  0022_dashboard_charts.sql  0023_create_stats_role.sql  0024_fix_chart_timescales.sql
entry-point/src/: extractors.rs  leveling.rs  main.rs  pricing.rs  state.rs
entry-point/src/handlers/: grants_util.rs  mod.rs
entry-point/src/handlers/admin/: avatars.rs  battlepass.rs  characters.rs  dashboard.html  frames.rs  missions.rs  mod.rs  prize_wheel.rs  router.rs  skins.rs  stats.rs  store.rs  users.rs
entry-point/src/handlers/auth/: delete_account.rs  mod.rs  password.rs  refresh.rs  router.rs  sessions.rs  signin.rs  signout.rs  signout_all.rs  signup.rs  utils.rs  verify.rs
entry-point/src/handlers/avatars/: catalog.rs  mod.rs  owned.rs  purchase.rs  router.rs  select.rs
entry-point/src/handlers/battlepass/: claim.rs  current.rs  mod.rs  progress.rs  router.rs  unlock_premium.rs  utils.rs
entry-point/src/handlers/characters/: list.rs  mod.rs  router.rs
entry-point/src/handlers/frames/: catalog.rs  owned.rs  purchase.rs  router.rs  select.rs
entry-point/src/handlers/metadata/: blob.rs  by_key.rs  mod.rs  router.rs
entry-point/src/handlers/missions/: list.rs  mod.rs  router.rs  service.rs
entry-point/src/handlers/payments/: charge.rs  get.rs  mod.rs  reconcile.rs  router.rs
entry-point/src/handlers/pricing/: list.rs  mod.rs  router.rs
entry-point/src/handlers/prize_wheel/: cooldown.rs  mod.rs  router.rs  spin.rs  wheel.rs
entry-point/src/handlers/profile/: get.rs  mod.rs  router.rs  update.rs
entry-point/src/handlers/runs/: history.rs  leaderboard.rs  mod.rs  router.rs  submit.rs
entry-point/src/handlers/signup_defaults/: backfill.rs  mod.rs  router.rs  service.rs
entry-point/src/middleware/: rate_limit.rs
entry-point/src/models/: auth.rs  mission_types.rs  mod.rs  rarity.rs  store_types.rs
entry-point/src/services/: etomin.rs  mailer.rs  mod.rs
integ-tests/: conftest.py  pyproject.toml
integ-tests/helpers/: api.py  compose.py  etomin_browser.py  factory.py
integ-tests/tests/: test_admin.py  test_auth.py  test_avatars.py  test_battlepass.py  test_bugs.py  test_characters.py  test_edges.py  test_energy_regen.py  test_frames.py  test_full_flows.py  test_metadata.py  test_missions.py  test_payments.py  test_pricing.py  test_prize_wheel.py  test_profile.py  test_runs.py  test_signup_defaults.py  test_skins.py  test_store.py  test_wallet.py
(+177 files in other folders)
