[package]
name = "veloz"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = "0.8"
tower = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database (Postgres)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# Utility
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

# Password Hashing
bcrypt = "0.18"
