[package]
name = "veloz"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = "0.8"
tower = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database (Postgres)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager", "tokio-rustls-comp"] }

# Utility
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

# Password Hashing
bcrypt = "0.18"

# Weighted-random for prize wheel
rand = "0.8"

# HTTP client for Etomin payments API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Transactional email: SQS (queue) producer/consumer + SES v2 (sender).
# Credentials resolve from the Fargate task IAM role via aws-config.
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1"
aws-sdk-sesv2 = "1"

# rustls crypto provider. reqwest pulls rustls+ring; the AWS SDK pulls
# rustls+aws-lc-rs. With both providers present, rustls 0.23 can't auto-pick
# one and panics at first TLS use. We depend on rustls directly to install a
# process-default provider in main() before any client is built.
rustls = { version = "0.23", features = ["aws-lc-rs"] }
